#4472 - Better built-in layer selection
- Added more layer descriptions and images